tighten security config and JWT authority assignment
- Replace the wildcard /api/v1/auth/** permit with an explicit list of
  public endpoints so newly added auth routes are blocked by default
- Assign ROLE_USER to authenticated tokens instead of an empty authority
  list, which was preventing method-level security checks from working
- Add a comment to the logging filter documenting why auth headers are
  intentionally excluded (HIPAA compliance)